backend/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ecommerce
  name: ecommerce
